fixed 0038572: Cannot build RPC service